<resources>
    <string name="app_name">FixMyLife</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="card1">Pantry</string>
    <string name="card6">Calendar</string>
    <string name="card4">Chat</string>
    <string name="card2">Notes</string>
    <string name="card3">Media</string>
    <string name="card5">Progress</string>
    <string name="title_activity_pantry">Pantry</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_media">Media</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_progress">Progress</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="urgent">Urgent Items:</string>
    <string name="have">Have:</string>
    <string name="quantity">Qty:</string>
    <string name="unit">Unit:</string>
    <string name="priority">Priority</string>
    <string name="iCantPick">I Can\'t Decide?!?!?</string>
    <string name="scan">Scan</string>
    <string name="addNew">Add New</string>
    <string name="upComing">UpComing Releases:</string>
    <string name="want">Want:</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="chatWith">Chat With:</string>
    <string name="videoCall">Video Call</string>
    <string name="getPoints">Get Points</string>
    <string name="redeem">Redeem Points</string>
    <string name="unlocked">Unlocked Rewards:</string>
    <string name="history">History:</string>
    <string name="importTask">Import Tasks</string>
    <string name="taskAble">Tasks Available:</string>
    <string name="nameText">Name:</string>
    <string name="quantityText">Quantity:</string>
    <string name="units">Units of Measure:</string>
    <string name="type">Type:</string>
    <string name="have_question">Have?</string>
    <string name="wish_question">WishList?</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="sign_in_with">Google Sign In</string>
    <string name="btn_logout_from_google">G+ Login</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="server_client_id">694048456092-ka73lu6rlg4a5lkitne0h81u1rmuq6ka.apps.googleusercontent.com </string>
    <string name="platform">Platform:</string>
    <string name="genre">Genre:</string>
    <string name="HW_ERROR">Buying or Wishing?</string>
    <string name="ptVal">Point Value:</string>
    <string name="details">Details:</string>
    <string name="dueDateText" />
    <string name="dueDate">Due Date:</string>
    <string name="urgetnQuestiom">Urgent?</string>

    <!-- Sendbird -->
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>

    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>

    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Open Channels</string>

    <!-- main -->
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">Select channel type</string>

    <!-- login -->
    <string name="login_user_id">User ID</string>
    <string name="login_user_nickname">Nickname</string>
    <string name="login_connect">Connect</string>

    <!-- Open Channel List -->
    <string name="open_channel_list_participant_count">%1$d participants</string>

    <string name="create_open_channel">Create Open Channel</string>
    <string name="participant_list">Participants</string>

    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Create channel</string>

    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>
    <string name="title_activity_Login">Login In</string>
</resources>
