<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sikware.FixMyLife.Media"
    tools:showIn="@layout/app_bar_media">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/sortMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort" />

            <Button
                android:id="@+id/filterMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/haveMedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/have" />

            <TextView
                android:id="@+id/qtyMedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="false"
                android:layout_weight="1"
                android:text="@string/platform" />

            <TextView
                android:id="@+id/priorMedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_weight="1"
                android:text="@string/genre" />
        </LinearLayout>



            <ListView
                android:id="@+id/mediaHaveListView"
                style="@style/Widget.AppCompat.ListView"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/havePantry2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/want" />

            <TextView
                android:id="@+id/qtyPantry2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/platform" />

            <TextView
                android:id="@+id/prioPantry2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_weight="1"
                android:text="@string/genre" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/border"
            android:id="@+id/mediaWantListView"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iCantPick" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/scan" />

            <Button
                android:id="@+id/addMediaBtn"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="@string/addNew" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>