<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sikware.FixMyLife.Notes"
    tools:showIn="@layout/app_bar_notes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent"
            android:textSize="10sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/notesWantListView"
            android:background="@drawable/bordersquare"
            android:orientation="vertical"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title" />

            <TextView
                android:id="@+id/priorPantry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@string/priority" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/border">

            <ListView
                android:id="@+id/notesHaveListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:text="@string/iCantPick" />

            <Button
                android:id="@+id/addNoteBtn"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:text="@string/addNew" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
