<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sikware.fixmylife.Progress"
    tools:showIn="@layout/app_bar_progress">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/history"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:text="@string/history" />

        <RelativeLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/unlockedList"
            android:layout_toLeftOf="@+id/unlockedList"
            android:layout_toStartOf="@+id/unlockedList"
            android:background="@drawable/bordersquare"
            android:padding="2dp"
            android:paddingRight="4dp">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/button6"
            android:layout_toLeftOf="@+id/textView6"
            android:layout_toStartOf="@+id/textView6"
            android:background="@drawable/border">

        </RelativeLayout>

        <Button
            android:id="@+id/button6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button5"
            android:layout_margin="8dp"
            android:text="Button"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="64dp"
            tools:text="@string/redeem" />

        <Button
            android:id="@+id/button5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:text="Button"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="16dp"
            tools:text="@string/getPoints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/unlockedList"
            android:layout_below="@+id/button6"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            tools:text="@string/unlocked" />

        <LinearLayout
            android:id="@+id/unlockedList"
            android:layout_width="185dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView6"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="2dp"
            android:paddingLeft="4dp"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="8dp"></LinearLayout>

    </RelativeLayout>

</LinearLayout>
