<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sikware.fixmylife.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="368dp"
        android:layout_height="40dp"
        app:srcCompat="@android:color/holo_red_light"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">


        <android.support.v7.widget.CardView
            android:id="@+id/pantry"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_column="0"
            android:layout_margin="16dp"
            android:layout_row="0"
            android:tag="Pantry"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="111dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:elevation="0dp"
                android:text="@string/card1"
                android:textAlignment="center"
                android:typeface="sans" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/notes"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_column="1"
            android:layout_margin="16dp"
            android:layout_row="0"
            android:tag="Notes"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="111dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:elevation="0dp"
                android:text="@string/card2"
                android:textAlignment="center"
                android:typeface="sans" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/media"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_column="0"
            android:layout_margin="16dp"
            android:layout_row="1"
            android:tag="Media"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="111dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:elevation="0dp"
                android:text="@string/card3"
                android:textAlignment="center"
                android:typeface="sans" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/chat"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_column="1"
            android:layout_margin="16dp"
            android:layout_row="1"
            android:tag="Chat"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="111dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:elevation="0dp"
                android:text="@string/card4"
                android:textAlignment="center"
                android:typeface="sans" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/progress"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_column="0"
            android:layout_margin="16dp"
            android:layout_row="2"
            android:tag="Progress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="111dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:elevation="0dp"
                android:text="@string/card5"
                android:textAlignment="center"
                android:typeface="sans" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/calendar"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_column="1"
            android:layout_margin="16dp"
            android:layout_row="2"
            android:tag="Calendar"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="111dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:elevation="0dp"
                android:text="@string/card6"
                android:textAlignment="center"
                android:typeface="sans" />
        </android.support.v7.widget.CardView>
    </GridLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/side_nav_bar"
        android:progressTint="@android:color/holo_purple"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="479dp" />


</android.support.constraint.ConstraintLayout>
